# Confidential-Cross-Chain-Lending-Platform

./: .env.example  .gitignore  Cargo.toml  Confidential Cross-Chain Lending Platform.md  README.md  build_output.txt
app/: next.config.js  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
app/prisma/: schema.prisma
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: DWalletPanel.tsx  EventLog.tsx  LoanList.tsx  LoanRequestForm.tsx  PreAlphaBanner.tsx  SponsorExplainer.tsx  StatusBadge.tsx
app/src/lib/: trpc.ts  utils.ts
app/src/pages/api/trpc/: [trpc].ts
app/src/sdk/: constants.ts  encrypt-client.ts  ika-client.ts  program.ts
app/src/server/: trpc.ts
app/src/server/routers/: _app.ts  dwallet.ts  encrypt.ts  loan.ts
app/src/test/: setup.ts
app/src/test/integration/: dwallet.test.ts  loan.test.ts
deploy/: build.sh  deploy.sh
programs/confidential-lending/: Cargo.toml
programs/confidential-lending/src/: error.rs  events.rs  graph.rs  lib.rs  state.rs  system.rs
programs/confidential-lending/src/instructions/: admin.rs  cancel_loan.rs  create_loan.rs  fund_loan.rs  initialize.rs  liquidate_loan.rs  mod.rs  repay_loan.rs
